--- a/src/app/_shared/modal/app-edit/app-edit.component.html
+++ b/src/app/_shared/modal/app-edit/app-edit.component.html
@@ -430,6 +430,18 @@
                   [(ngModel)]="data().x.welcomeText" [linenumber]="true">
                 </app-cm>
               </div>
+
+              <div class="form-group mb-3">
+                <label class="form-label">App Group</label>
+                <select class="form-select" name="appGroup"
+                  [compareWith]="compareByIdFn" 
+                  [(ngModel)]="data().group">
+                  <option [ngValue]="undefined" class="text-muted">Ungroup</option>
+                  @for (app of appGroups; track app.id) {
+                    <option [ngValue]="app">{{app.name}}</option>
+                  }
+                </select>
+              </div>
             </div>
           </ng-template>
         </li>
