--- a/src/app/design/design-home/design-home.component.html
+++ b/src/app/design/design-home/design-home.component.html
@@ -1,5 +1,5 @@
 <div class="position-sticky sticky-top bg-reka" [ngClass]="bgClassName">
-  <div style="max-width:710px" class="limit-width centered d-flex justify-content-between">
+  <div style="max-width:720px" class="limit-width centered d-flex justify-content-between">
     <div class="home-top-l p-2">
       <img src="assets/icons/logo-w.svg" width="38">
     </div>
@@ -7,6 +7,9 @@
       <div class="d-flex">
         <a class="top-link p-3" routerLink="/design" routerLinkActive="active">MY APP</a>
         <a class="top-link p-3" routerLink="/repo" routerLinkActive="active">REPO</a>
+        @if (user?.manager){
+          <a class="top-link p-3" routerLink="/admin" routerLinkActive="active">ADMIN</a>
+        }
         <a class="top-link p-3" routerLink="/devprofile" routerLinkActive="active">
           <fa-icon [icon]="['far', 'user']" [fixedWidth]="true"></fa-icon>
         </a>
@@ -160,53 +163,92 @@
             <h4>No application available</h4>
           </div>  
         }@else {
-          <div class="tile-wrap tile-center">
-            @for (item of itemList | filter:searchText; track $index) {
-              <!-- @for (item of kv?.value; track $index){ -->
-                <div class="tile"
-                  style="text-overflow: ellipsis" onclick="">
-                  <div class="notch" [ngStyle]="{'background-color':item.theme}"></div>
-                  <div class="tile-image"
-                    [ngStyle]="item.logo && {'background-image':'url('+baseApi+'/app/logo/'+item.logo+')'}">
-                  </div>
-                  <div class="tile-mid">
-                    <div class="tile-content">
-                      <h6 class="list-group-item-heading">{{item.title}}</h6>
-                      <p class="desc">{{item.description}}</p>
-                    </div>
-                    <div class="tile-action">
-                      <div class="p-1">
-                        <button type="button" class="btn btn-primary btn-round mb-2 stack" [class.disabled]="offline"
-                          routerLink="/design/{{item.id}}">
-                          <fa-icon class="icon" [icon]="['fas','pencil-alt']" [fixedWidth]="true"></fa-icon> Edit App
-                        </button>
-                        <div class="d-flex justify-content-between">
-                          <button type="button" class="btn btn-light btn-round me-1" [class.disabled]="offline"
-                            title="Copy App"
-                            (click)="cloneItem(appEditTpl,item, true)">
-                            <fa-icon [icon]="['fas','copy']" [fixedWidth]="true"></fa-icon>
-                          </button>
-                          <button type="button" class="btn btn-light btn-round me-1"
-                            title="Edit Properties"
-                            (click)="editItem(appEditTpl,item, false)">
-                            <fa-icon [icon]="['fas','cog']" [fixedWidth]="true"></fa-icon>
-                          </button>
-                          <button type="button" class="btn btn-danger btn-round" [class.disabled]="offline"
-                            title="Remove App"
-                            (click)="removeItem(removeItemTpl,item)">
-                            <fa-icon [icon]="['fas','trash']" [fixedWidth]="true"></fa-icon>
-                          </button>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  @if (item.live) {
-                    <div class="d-inline-block me-2 bg-success text-white rounded px-1 small" style="position:absolute; bottom:5px; left:5px;font-weight: bold; font-size: 0.6em;">LIVE</div>
+
+          <div class="px-2">
+            <div class="py-1 small m-a" [class.limit-width]="!dataset?.wide">
+              <button class="btn border btn-light btn-sm rounded-3-5 me-1 mb-1 py-1 px-2" [ngClass]="{'bg-info-subtle text-primary border-primary': groupFilter==null}" (click)="groupFilter=null">
+                <fa-icon [icon]="['fas','layer-group']" [fixedWidth]="true"></fa-icon> All
+              </button>
+              @for(gf of groupedItemList; track $index){
+                <button class="btn border btn-light btn-sm rounded-3-5 me-1 mb-1 py-1 px-2"  [ngClass]="{'bg-info-subtle text-primary border-primary': groupFilter==gf.key}" (click)="groupFilter=gf.key">
+                  @if (gf?.key=='undefined'){
+                    <span class="text-muted fst-italic"> Ungrouped</span>
+                  }@else {
+                    {{gf?.key}}
                   }
-                </div>
-              <!-- } -->
-            }  
+                </button>
+              }
+            </div>
           </div>
+
+<div class="d-flex flex-wrap flex-row align-content-center">
+
+          <!-- <pre>{{itemList| groupBy: 'group' | json}}</pre> -->
+          @for (dsKv of groupedItemList | filter:searchText ; track $index) {
+
+            @if( !groupFilter || groupFilter==dsKv.key){
+
+              <div style="flex-grow: 1;">
+                <div class="p-2 rounded-2 text-center bg-light mt-2 mx-2 pointer" (click)="hideGroupItems[dsKv.key]=!hideGroupItems[dsKv.key]">
+                  @if (dsKv.key!='undefined'){
+                    <span class="">{{dsKv.key}}</span>
+                  }@else {
+                    <span class="fst-italic text-muted">Ungrouped</span>
+                  }                  
+                </div>
+              
+                @if (!hideGroupItems[dsKv.key]){
+                  <div class="tile-wrap tile-center">
+                    @for (item of dsKv.value; track $index) {
+                        <div class="tile"
+                          style="text-overflow: ellipsis" onclick="">
+                          <div class="notch" [ngStyle]="{'background-color':item.theme}"></div>
+                          <div class="tile-image"
+                            [ngStyle]="item.logo && {'background-image':'url('+baseApi+'/app/logo/'+item.logo+')'}">
+                          </div>
+                          <div class="tile-mid">
+                            <div class="tile-content">
+                              <h6 class="list-group-item-heading">{{item.title}}</h6>
+                              <p class="desc">{{item.description}}</p>
+                            </div>
+                            <div class="tile-action">
+                              <div class="p-1">
+                                <button type="button" class="btn btn-primary btn-round mb-2 stack" [class.disabled]="offline"
+                                  routerLink="/design/{{item.id}}">
+                                  <fa-icon class="icon" [icon]="['fas','pencil-alt']" [fixedWidth]="true"></fa-icon> Edit App
+                                </button>
+                                <div class="d-flex justify-content-between">
+                                  <button type="button" class="btn btn-light btn-round me-1" [class.disabled]="offline"
+                                    title="Copy App"
+                                    (click)="cloneItem(appEditTpl,item, true)">
+                                    <fa-icon [icon]="['fas','copy']" [fixedWidth]="true"></fa-icon>
+                                  </button>
+                                  <button type="button" class="btn btn-light btn-round me-1"
+                                    title="Edit Properties"
+                                    (click)="editItem(appEditTpl,item, false)">
+                                    <fa-icon [icon]="['fas','cog']" [fixedWidth]="true"></fa-icon>
+                                  </button>
+                                  <button type="button" class="btn btn-danger btn-round" [class.disabled]="offline"
+                                    title="Remove App"
+                                    (click)="removeItem(removeItemTpl,item)">
+                                    <fa-icon [icon]="['fas','trash']" [fixedWidth]="true"></fa-icon>
+                                  </button>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                          @if (item.live) {
+                            <div class="d-inline-block me-2 bg-success text-white rounded px-1 small" style="position:absolute; bottom:5px; left:5px;font-weight: bold; font-size: 0.6em;">LIVE</div>
+                          }
+                        </div>
+                    }  
+                  </div>
+                }
+              </div>
+            }
+          }
+
+        </div>
         }
       }@else {
         <div class="p-4 text-muted text-center">
