--- a/src/app/design/editor/cogna-editor/cogna-editor.component.html
+++ b/src/app/design/editor/cogna-editor/cogna-editor.component.html
@@ -142,6 +142,11 @@
                     [class.disabled]="offline">
                     <fa-icon [icon]="['fas','list-ol']" [fixedWidth]="true"></fa-icon>
                   </button>
+                  <button type="button" class="btn btn-sm border border-2 btn-outline-secondary ms-1"
+                    title="Chat history" (click)="viewChatHistory(viewChatHistoryTpl, cogna)"
+                    [class.disabled]="offline">
+                    <fa-icon [icon]="['far','clock']" [fixedWidth]="true"></fa-icon>
+                  </button>
                   <button type="button" class="btn btn-sm border border-2 btn-outline-danger ms-1"
                     (click)="removeCogna(removeCognaTpl,cogna)" [class.disabled]="offline">
                     <fa-icon [icon]="['fas','trash']" [fixedWidth]="true"></fa-icon>
@@ -477,6 +482,42 @@
                       <a class="pointer" (click)="editCognaTool(editCognaToolTpl,{appId:app.id, enabled: true, params:[]},false)">
                         <fa-icon [icon]="['fas','plus']" [fixedWidth]="true"></fa-icon>
                         Add Tool
+                      </a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="card border border-2 mb-2">
+                  <div class="card-header p-2">                    
+                    Model Context Protocol (MCP)
+                    <div class="small">{{cogna.mcps?.length}} MCP Server</div>                                
+                  </div>
+                  <div class="list-group list-group-flush">
+                    @for (b of cogna.mcps; track b.id) {
+                      <div class="list-group-item p-2 element">
+                        <div class="element-edit nowrap"
+                          style="position:absolute;top:3px;right:3px; padding:3px">
+                            <button type="button" class="btn btn-round btn-sm btn-info" title="Edit Server"
+                              (click)="editCognaMcp(editCognaMcpTpl, b, false)">
+                              <fa-icon [icon]="['fas','pencil-alt']" [fixedWidth]="true">
+                              </fa-icon>
+                            </button>
+                          <button type="button" class="btn btn-round btn-sm btn-danger" title="Remove Server"
+                            (click)="removeCognaMcp(b)">
+                            <fa-icon [icon]="['fas','trash']" [fixedWidth]="true">
+                            </fa-icon>
+                          </button>
+                        </div>
+                        <fa-icon class="float-start" [icon]="['fas','file']" [fixedWidth]="true"></fa-icon>                        
+                        <div class="ms-4" [class.strike]="!b.enabled" [class.text-muted]="!b.enabled">{{b.name}}</div>
+                      </div>
+                    }@empty {
+                      <div class="text-black-50 p-3 text-center fs-4"> No MCP server specified</div>
+                    }
+                    <div class="list-group-item p-2">
+                      <a class="pointer" (click)="editCognaMcp(editCognaMcpTpl,{appId:app.id, enabled: true, timeout:60},false)">
+                        <fa-icon [icon]="['fas','plus']" [fixedWidth]="true"></fa-icon>
+                        Add MCP server
                       </a>
                     </div>
                   </div>
@@ -2173,15 +2214,136 @@
   </div>
 </ng-template>
 
+<ng-template #editCognaMcpTpl let-c="close" let-d="dismiss">
+  <div class="modal-header">
+    <h4 class="modal-title">Add MCP Server</h4>
+  </div>
+  <div class="modal-body fix-gutter" #cognaMcpEditForm="ngForm" ngForm>
+    
+    <div class="mb-1">
+      <label class="form-label">Server Name *</label>
+      <input type="text" class="form-control" [(ngModel)]="editMcpData.name" #name="ngModel"      
+        (ngModelChange)="editMcpData.name=toSnakeCase(editMcpData.name)"
+        name="name" required>
+      @if (name?.invalid) {
+        <small class="form-text has-warning">
+          @if (name?.errors?.required) {
+            <span class="help-block">Name is required</span>
+          }
+        </small>
+      }
+    </div>
+    <div class="mb-3">
+      <div class="form-check">
+        <input type="checkbox" class="form-check-input" id="enabled"
+          [(ngModel)]="editMcpData.enabled" name="enabled">
+          <label class="form-check-label" for="enabled">MCP Server Enabled</label>
+      </div>
+    </div> 
+    <div class="mb-3">
+      <label class="form-label">SSE URL *</label>
+      <input type="text" class="form-control" [(ngModel)]="editMcpData.sseUrl" #sseUrl="ngModel"
+        name="sseUrl"
+        required>
+    </div>
+    <div class="mb-3">
+      <label class="form-label">Timeout (in seconds)</label>
+      <input type="number" class="form-control" [(ngModel)]="editMcpData.timeout" #timeout="ngModel"
+        name="timeout"
+        required>
+    </div>
+      
+  </div>
+  <div class="modal-footer justify-content-between">
+    <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+    <button type="button" class="btn btn-round btn-primary" [disabled]="cognaMcpEditForm.invalid"
+      (click)="c(editMcpData)">
+      <fa-icon [icon]="['fas','plus']" [fixedWidth]="true"></fa-icon>
+      Save MCP Server
+    </button>
+  </div>
+</ng-template>
+
 <ng-template #viewChatHistoryTpl let-c="close" let-d="dismiss">
   <div class="modal-header">
     <h4 class="modal-title">View Chat History</h4>
   </div>
-  <div class="list-group list-group-flush small">
-    @for (item of chatHistoryList; track $index) {
-      <div class="list-group-item" [innerHTML]="targetBlank(item)" [class.list-group-item-primary]="isResponse(item)"></div>
-    }        
+
+  <div class="bg-light p-2">
+    <div class="input-group" ngbDropdown>
+      <input type="search" autocapitalize="none" class="form-control" placeholder="Start typing to search..."
+        [(ngModel)]="chatHistorySearchText" (keyup.enter)="loadChatHistory(cogna.id,chatHistoryPageNumber)">
+      <a type="button" class="btn btn-outline-secondary" title="Export Log"
+        href="{{baseApi}}/cogna/{{cogna.id}}/export-log-csv" target="_blank">
+        <fa-icon [icon]="['fas','file-export']" [fixedWidth]="true"></fa-icon>
+      </a>
+
+      <button type="button" class="btn btn-outline-secondary" id="dropdownFormChatHistory" title="Select Status"
+        ngbDropdownToggle>
+        <fa-icon [icon]="['fas','filter']" [fixedWidth]="true"></fa-icon>
+      </button>
+      <div ngbDropdownMenu aria-labelledby="dropdownFormChatHistory">
+        <div class="px-2">
+          <label class="small">Page Size</label>
+          <div class="btn-group float-end">
+            @for (i of [15,25,50,100]; track i) {
+              <input class="btn-check" type="radio" [value]="i" id="tpagesize-{{i}}"
+                name="tpagesize-{{i}}" (click)="loadChatHistory(cogna.id,1, i)"
+                [(ngModel)]="chatHistoryPageSize">
+              <label for="tpagesize-{{i}}" class="btn btn-outline-secondary btn-sm">{{i}}</label>
+            }
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
+
+  <div class="table-responsive">
+    <table class="table table-bordered mt-3 table-sm small">
+      <thead>
+        <tr>
+          <th>Type</th>
+          <th>Prompt</th>
+          <th>Response</th>
+          <th>Email</th>
+          <th>Timestamp</th>
+        </tr>
+      </thead>
+      <tbody>
+        @for (item of chatHistoryList; track $index) {
+          <tr>
+            <td>{{item.type}}</td>
+            <td>{{item.text}}</td>
+            <td>{{item.response}}</td>
+            <td>{{item.email}}</td>
+            <td>{{item.timestamp|date:'yy-MM-d HH:mm:ss'}}</td>
+          </tr>
+        }
+      </tbody>
+    </table>
+  </div>
+
+  @if (chatHistoryTotal>chatHistoryPageSize) {
+    <div
+      class="text-center d-flex justify-content-center pagination-rounded p-1 print-hide">
+      <ngb-pagination [collectionSize]="chatHistoryTotal" [pageSize]="chatHistoryPageSize" [(page)]="chatHistoryPageNumber"
+        [maxSize]="10" [rotate]="true" (pageChange)="loadChatHistory(cogna.id, chatHistoryPageNumber)"
+        boundaryLinks="true" directionLinks="true">
+        <ng-template ngbPaginationFirst>
+          <fa-icon [icon]="['fas','angle-double-left']"></fa-icon>              
+        </ng-template>
+        <ng-template ngbPaginationPrevious>
+          <fa-icon [icon]="['fas','chevron-left']"></fa-icon>
+        </ng-template>
+        <ng-template ngbPaginationNext>
+          <fa-icon [icon]="['fas','chevron-right']"></fa-icon>
+        </ng-template>
+        <ng-template ngbPaginationLast>              
+          <fa-icon [icon]="['fas','angle-double-right']"></fa-icon>
+        </ng-template>
+      </ngb-pagination>
+    </div>
+  }
   <div class="modal-footer justify-content-between">
     <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
   </div>
