--- a/src/app/devprofile/devprofile.component.html
+++ b/src/app/devprofile/devprofile.component.html
@@ -1,5 +1,5 @@
 <div class="bg-reka" [ngClass]="bgClassName">
-  <div style="max-width:710px" class="limit-width centered d-flex justify-content-between">
+  <div style="max-width:720px" class="limit-width centered d-flex justify-content-between">
     <div class="home-top-l p-2">
       <img src="assets/icons/logo-w.svg" width="38">
       </div>
@@ -7,6 +7,9 @@
         <div class="d-flex">
           <a class="top-link p-3" routerLink="/design" routerLinkActive="active">MY APP</a>
           <a class="top-link p-3" routerLink="/repo" routerLinkActive="active">REPO</a>
+          @if (user?.manager){
+            <a class="top-link p-3" routerLink="/admin" routerLinkActive="active">ADMIN</a>
+          }
           <a class="top-link p-3" routerLink="/devprofile" routerLinkActive="active">
             <fa-icon [icon]="['far', 'user']" [fixedWidth]="true"></fa-icon>
           </a>
@@ -17,7 +20,7 @@
   <page-title>
     <h4>Creator Profile</h4>
   </page-title>
-  <div class="limit-width m-a pb-3 ps-2 pe-2" style="max-width:710px">
+  <div class="limit-width m-a pb-3 ps-2 pe-2" style="max-width:720px">
     <div class="text-center">
       <img src="{{user?.imageUrl}}" class="rounded mb-2" onError="this.src='assets/img/avatar-big.png'"
         style="max-width:100px;">
